# Voice-Model-v1

./: .dockerignore  .gitignore  Dockerfile.train  README.md  Voice_Model.ipynb  api.py  custom_encoder_v3.py  eval_stage_a.py  infer_stage_a.py  main.py  pyproject.toml  requirements.txt  train.csv  train_encoder.py  train_stage_a.py  val.csv
fleet/: gcs_manifest.json  job_state.json  s3_manifest.json  sync_gcs.sh  sync_s3.sh
frontend/: index.html
scripts/: run_stage_a_docker.sh  run_stage_a_native.sh  run_training_windows.ps1
