[project]
name = "voice-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.13.0",
    "bitsandbytes==0.49.2",
    "datasets==4.0.0",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "librosa==0.11.0",
    "matplotlib==3.10.0",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "peft==0.19.1",
    "scikit-learn>=1.7.2",
    "seaborn==0.13.2",
    "soundfile==0.14.0",
    "tensorboard==2.20.0",
    "torchaudio==2.11.0",
    "tqdm>=4.68.2",
    "transformers==5.10.2",
]
